--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Rendychristian</title>
-        <link rel="stylesheet" href="gallery.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device, initial-scale=1">    
     </head>
     <body>
