--- a/index.html
+++ b/index.html
@@ -8,68 +8,68 @@
     </head>
     <body>
        <div class="container">
-           <img src="img/foto53.jpg">
+           <img src="foto53.jpg">
            <h1>Rendy christian</h1>
            <p>1 Korintus 16:7</p>
            <p>Sebab sekarang aku tidak mau melihat kamu hanya sepintas lalu saja. Aku harap dapat tinggal agak lama dengan kamu, jika diperkenakan Tuhan.
        </div>
        <div class="gallery">
-           <img src="img/foto2.jpg">
-           <img src="img/foto3.jpg">
-           <img src="img/foto4.jpg">
-           <img src="img/foto5.jpg">
-           <img src="img/foto6.jpg">
-           <img src="img/foto7.jpg">
-           <img src="img/foto8.jpg">
-           <img src="img/foto9.jpg">
-           <img src="img/foto10.jpg">
-           <img src="img/foto11.jpg">
-           <img src="img/foto12.jpg">
-           <img src="img/foto13.jpg">
-           <img src="img/foto14.jpg">
-           <img src="img/foto15.jpg">
-           <img src="img/foto16.jpg">
-           <img src="img/foto17.jpg">
-           <img src="img/foto18.jpg">
-           <img src="img/foto19.jpg">
-           <img src="img/foto20.jpg">
-           <img src="img/foto21.jpg">
-           <img src="img/foto22.jpg">
-           <img src="img/foto23.jpg">
-           <img src="img/foto24.jpg">
-           <img src="img/foto25.jpg">
-           <img src="img/foto26.jpg">
-           <img src="img/foto27.jpg">
-           <img src="img/foto28.jpg">
-           <img src="img/foto29.jpg">
-           <img src="img/foto30.jpg">
-           <img src="img/foto31.jpg">
-           <img src="img/foto32.jpg">
-           <img src="img/foto33.jpg">
-           <img src="img/foto34.jpg">
-           <img src="img/foto35.jpg">
-           <img src="img/foto36.jpg">
-           <img src="img/foto37.jpg">
-           <img src="img/foto38.jpg">
-           <img src="img/foto39.jpg">
-           <img src="img/foto40.jpg">
-           <img src="img/foto41.jpg">
-           <img src="img/foto42.jpg">
-           <img src="img/foto43.jpg">
-           <img src="img/foto44.jpg">
-           <img src="img/foto45.jpg">
-           <img src="img/foto46.jpeg">
-           <img src="img/foto47.jpeg">
-           <img src="img/foto48.jpg">
-           <img src="img/foto49.jpg">
-           <img src="img/foto50.jpg">
-           <img src="img/foto51.jpg">
-           <img src="img/foto52.jpg">
-           <img src="img/foto53.jpg">
-           <img src="img/foto54.jpg">
-           <img src="img/foto55.jpg">
-           <img src="img/foto56.jpg">
-           <img src="img/foto57.jpg">
+           <img src="foto2.jpg">
+           <img src="foto3.jpg">
+           <img src="foto4.jpg">
+           <img src="foto5.jpg">
+           <img src="foto6.jpg">
+           <img src="foto7.jpg">
+           <img src="foto8.jpg">
+           <img src="foto9.jpg">
+           <img src="foto10.jpg">
+           <img src="foto11.jpg">
+           <img src="foto12.jpg">
+           <img src="foto13.jpg">
+           <img src="foto14.jpg">
+           <img src="foto15.jpg">
+           <img src="foto16.jpg">
+           <img src="foto17.jpg">
+           <img src="foto18.jpg">
+           <img src="foto19.jpg">
+           <img src="foto20.jpg">
+           <img src="foto21.jpg">
+           <img src="foto22.jpg">
+           <img src="foto23.jpg">
+           <img src="foto24.jpg">
+           <img src="foto25.jpg">
+           <img src="foto26.jpg">
+           <img src="foto27.jpg">
+           <img src="foto28.jpg">
+           <img src="foto29.jpg">
+           <img src="foto30.jpg">
+           <img src="foto31.jpg">
+           <img src="foto32.jpg">
+           <img src="foto33.jpg">
+           <img src="foto34.jpg">
+           <img src="foto35.jpg">
+           <img src="foto36.jpg">
+           <img src="foto37.jpg">
+           <img src="foto38.jpg">
+           <img src="foto39.jpg">
+           <img src="foto40.jpg">
+           <img src="foto41.jpg">
+           <img src="foto42.jpg">
+           <img src="foto43.jpg">
+           <img src="foto44.jpg">
+           <img src="foto45.jpg">
+           <img src="foto46.jpeg">
+           <img src="foto47.jpeg">
+           <img src="foto48.jpg">
+           <img src="foto49.jpg">
+           <img src="foto50.jpg">
+           <img src="foto51.jpg">
+           <img src="foto52.jpg">
+           <img src="foto53.jpg">
+           <img src="foto54.jpg">
+           <img src="foto55.jpg">
+           <img src="foto56.jpg">
+           <img src="foto57.jpg">
         </div>
         <center><h2>Contact me</h2></center>
        <div class="footer">
