--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
            <img src="foto55.jpg">
            <img src="foto56.jpg">
            <img src="foto57.jpg">
+           <img src="foto58.jpg">
         </div>
         <center><h2>Contact me</h2></center>
        <div class="footer">
