--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <header class="lapisan">
        <div class="container">
            <img src="foto53.jpg">
-           <h1>Rendy christian</h1>
+           <h1>Rendy christian</h1> <br>
            <p>1 Korintus 16:7</p>
            <p>Sebab sekarang aku tidak mau melihat kamu hanya sepintas lalu saja. Aku harap dapat tinggal agak lama dengan kamu, jika diperkenakan Tuhan.
        </div>
