--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
            <img src="foto56.jpg">
            <img src="foto57.jpg">
            <img src="foto58.jpg">
+           <img src="foto59.jpg">
+           <img src="foto60.jpg">
         </div>
         <center><h2>Contact me</h2></center>
        <div class="footer">
