--- a/index.html
+++ b/index.html
@@ -4,74 +4,75 @@
     <head>
         <title>Rendychristian</title>
         <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device, initial-scale=1">    
+        <meta name="viewport" content="width=device, initial-scale=1">   
+        <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet"> 
     </head>
     <body>
        <header class="lapisan">
        <div class="container">
            <img src="foto53.jpg">
-           <h1>Rendy christian</h1> <br>
-           <p>1 Korintus 16:7</p>
-           <p>Sebab sekarang aku tidak mau melihat kamu hanya sepintas lalu saja. Aku harap dapat tinggal agak lama dengan kamu, jika diperkenakan Tuhan.
+           <h1 data-aos="zoom-in>Rendy christian</h1> <br>
+           <p data-aos="zoom-in" data-aos-duration="1000">1 Korintus 16:7</p>
+           <p data-aos="zoom-in" data-aos-duration="1000">Sebab sekarang aku tidak mau melihat kamu hanya sepintas lalu saja. Aku harap dapat tinggal agak lama dengan kamu, jika diperkenakan Tuhan.
        </div>
        <div class="gallery">
-           <img src="foto2.jpg">
-           <img src="foto3.jpg">
-           <img src="foto4.jpg">
-           <img src="foto5.jpg">
-           <img src="foto6.jpg">
-           <img src="foto7.jpg">
-           <img src="foto8.jpg">
-           <img src="foto9.jpg">
-           <img src="foto10.jpg">
-           <img src="foto11.jpg">
-           <img src="foto12.jpg">
-           <img src="foto13.jpg">
-           <img src="foto14.jpg">
-           <img src="foto15.jpg">
-           <img src="foto16.jpg">
-           <img src="foto17.jpg">
-           <img src="foto18.jpg">
-           <img src="foto19.jpg">
-           <img src="foto20.jpg">
-           <img src="foto21.jpg">
-           <img src="foto22.jpg">
-           <img src="foto23.jpg">
-           <img src="foto24.jpg">
-           <img src="foto25.jpg">
-           <img src="foto26.jpg">
-           <img src="foto27.jpg">
-           <img src="foto28.jpg">
-           <img src="foto29.jpg">
-           <img src="foto30.jpg">
-           <img src="foto31.jpg">
-           <img src="foto32.jpg">
-           <img src="foto33.jpg">
-           <img src="foto34.jpg">
-           <img src="foto35.jpg">
-           <img src="foto36.jpg">
-           <img src="foto37.jpg">
-           <img src="foto38.jpg">
-           <img src="foto39.jpg">
-           <img src="foto40.jpg">
-           <img src="foto41.jpg">
-           <img src="foto42.jpg">
-           <img src="foto43.jpg">
-           <img src="foto44.jpg">
-           <img src="foto45.jpg">
-           <img src="foto46.jpeg">
-           <img src="foto47.jpeg">
-           <img src="foto48.jpg">
-           <img src="foto49.jpg">
-           <img src="foto50.jpg">
-           <img src="foto51.jpg">
-           <img src="foto52.jpg">
-           <img src="foto53.jpg">
-           <img src="foto54.jpg">
-           <img src="foto55.jpg">
-           <img src="foto56.jpg">
-           <img src="foto57.jpg">
-           <img src="foto58.jpg">
+           <img src="foto2.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto3.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto4.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto5.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto6.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto7.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto8.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto9.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto10.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto11.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto12.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto13.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto14.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto15.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto16.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto17.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto18.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto19.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto20.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto21.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto22.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto23.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto24.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto25.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto26.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto27.jpg" data-aos="zoom-in" data-aos-duration="900"> 
+           <img src="foto28.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto29.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto30.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto31.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto32.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto33.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto34.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto35.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto36.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto37.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto38.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto39.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto40.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto41.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto42.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto43.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto44.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto45.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto46.jpeg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto47.jpeg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto48.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto49.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto50.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto51.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto52.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto53.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto54.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto55.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto56.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto57.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto58.jpg" data-aos="zoom-in" data-aos-duration="900">
         </div>
         <center><h2>Contact me</h2></center>
        <div class="footer">
@@ -83,5 +84,10 @@
            </div></center>
        </div>
         </header>
+        
+         <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
