--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
        <header class="lapisan">
        <div class="container">
-           <img src="foto53.jpg">
-           <h1 data-aos="zoom-in>Rendy christian</h1> <br>
+           <img src="foto1.jpg">
+           <h1 data-aos="zoom-in">Rendy christian</h1> <br>
            <p data-aos="zoom-in" data-aos-duration="1000">1 Korintus 16:7</p>
            <p data-aos="zoom-in" data-aos-duration="1000">Sebab sekarang aku tidak mau melihat kamu hanya sepintas lalu saja. Aku harap dapat tinggal agak lama dengan kamu, jika diperkenakan Tuhan.
        </div>
