--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Rendychristian</title>
+        <title>GO(Gallery Online)</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device, initial-scale=1">   
         <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet"> 
