--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
            <img src="foto56.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto57.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto58.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto59.jpg" data-aos="zoom-in" data-aos-duration="900">
         </div>
         <center><h2>Contact me</h2></center>
        <div class="footer">
