--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device, initial-scale=1">   
         <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet"> 
+        <link rel="shortcut icon" href="logo.png">
     </head>
     <body>
        <header class="lapisan">
