--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <img src="foto7.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto8.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto9.jpg" data-aos="zoom-in" data-aos-duration="900">
-           <img src="foto10.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto10.png" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto11.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto12.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto13.jpg" data-aos="zoom-in" data-aos-duration="900">
