--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
            <img src="foto43.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto44.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto45.jpg" data-aos="zoom-in" data-aos-duration="900">
-           <img src="foto46.jpeg" data-aos="zoom-in" data-aos-duration="900">
-           <img src="foto47.jpeg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto46.jpg" data-aos="zoom-in" data-aos-duration="900">
+           <img src="foto47.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto48.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto49.jpg" data-aos="zoom-in" data-aos-duration="900">
            <img src="foto50.jpg" data-aos="zoom-in" data-aos-duration="900">
