--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
                 </svg>
             </button>
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-                <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 xl:bg-teal-900 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 xl:bg-teal-900 md:bg-teal-900 md:flex-row md:space-x-8 md:mt-0 md:border-0 dark:border-gray-700">
                 <li>
-                    <a href="file:///C:/Users/Theresia%20Cicilia/Documents/Rendy/ren12chris.github.io/index.html#" class="block py-2 pl-3 pr-4 text-white xl:text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+                    <a href="file:///C:/Users/Theresia%20Cicilia/Documents/Rendy/ren12chris.github.io/index.html#" class="block py-2 pl-3 pr-4 text-white xl:text-white md:text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
                 </li>
                 <li>
-                    <a href="https://jakartaluxurycar.com/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebLuxury</a>
+                    <a href="https://jakartaluxurycar.com/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebLuxury</a>
                 </li>
                 <li>
-                    <a href="https://renchris12.github.io/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebPortfolio</a>
+                    <a href="https://renchris12.github.io/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebPortfolio</a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UC_qBKNGMK5n7Rlub_2E88MQ" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Youtube</a>
+                    <a href="https://www.youtube.com/channel/UC_qBKNGMK5n7Rlub_2E88MQ" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Youtube</a>
                 </li>
                 </ul>
             </div>
@@ -42,13 +42,15 @@
         </nav>
   
        </div>
+  <!-- Card -->
+    <div class="lg:grid grid-cols-2 gap-4">
        <div class="my-10">
         <div>
           <h1 class="mb-4 mt-5 text-4xl text-center font-serif font-medium tracking-wide leading-none tracking-tight text-gray-100 md:text-5xl lg:text-4xl dark:text-white" data-aos="zoom-in" data-aos-duration="1000">
                 foto random</h1>
         </div>
-
-         <div class="max-w-2xl mx-5" data-aos="fade-up" data-aos-duration="1000">
+        <center>
+          <div class="max-w-2xl mx-5 xl:mx-5" data-aos="fade-up" data-aos-duration="1000">
             <div id="default-carousel" class="" data-carousel="static">
               <div class="overflow-hidden relative h-56 rounded-xl sm:h-64 xl:h-80 2xl:h-96">
 
@@ -195,16 +197,19 @@
             </div>
 
          </div>
+        </center>
          <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
        </div>
 
 <!--- Rebung -->
+     <div class="my-10">
        <div>
         <h1 class="mb-4 mt-5 text-4xl text-center font-serif font-medium tracking-wide leading-none tracking-tight text-gray-100 md:text-5xl lg:text-4xl dark:text-white" data-aos="zoom-in" data-aos-duration="1000">
               foto Rebung</h1>
       </div>
 
-       <div class="max-w-2xl mx-5" data-aos="fade-up" data-aos-duration="1000">
+       <center>
+        <div class="max-w-2xl mx-5 xl:mx-5" data-aos="fade-up" data-aos-duration="1000">
           <div id="default-carousel" class="" data-carousel="static">
             <div class="overflow-hidden relative h-56 rounded-xl sm:h-64 xl:h-80 2xl:h-96">
 
@@ -343,10 +348,13 @@
             </div>
 
           </div>
+        </center>
 
        </div>
        <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
      </div>
+    </div>
+   </div>
  <!--Footer-->
         
     <footer class="bg-teal-900 rounded-lg shadow m-4 dark:bg-gray-800">
