--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
                 <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 xl:bg-teal-900 md:bg-teal-900 md:flex-row md:space-x-8 md:mt-0 md:border-0 dark:border-gray-700">
                 <li>
-                    <a href="file:///C:/Users/Theresia%20Cicilia/Documents/Rendy/ren12chris.github.io/index.html#" class="block py-2 pl-3 pr-4 text-white xl:text-white md:text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+                    <a href="file:///C:/Users/Theresia%20Cicilia/Documents/Rendy/ren12chris.github.io/index.html#" class="block py-2 pl-3 pr-4 text-white xl:text-white md:text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:hover:text-white-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
                 </li>
                 <li>
-                    <a href="https://jakartaluxurycar.com/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebLuxury</a>
+                    <a href="https://jakartaluxurycar.com/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-white-700 md:p-0 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebLuxury</a>
                 </li>
                 <li>
-                    <a href="https://renchris12.github.io/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebPortfolio</a>
+                    <a href="https://renchris12.github.io/" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-white-700 md:p-0 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">WebPortfolio</a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UC_qBKNGMK5n7Rlub_2E88MQ" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Youtube</a>
+                    <a href="https://www.youtube.com/channel/UC_qBKNGMK5n7Rlub_2E88MQ" target="_blank" class="block py-2 pl-3 pr-4 text-gray-900 xl:text-white md:text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-white-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Youtube</a>
                 </li>
                 </ul>
             </div>
